chore: add .gitignore and upload initial project files

--- a/data_transformation_salary/data_transformation_w.salary.ipynb
+++ b/data_transformation_salary/data_transformation_w.salary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cc05b98c",
+   "id": "1768e89f",
    "metadata": {},
    "source": [
     "# Data Transformation\n",
@@ -16,13 +16,14 @@
     "5. One Hot Encoding\n",
     "6. Scaling\n",
     "6. PCA\n",
-    "7. Project"
+    "7. Project\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e7d372a",
+   "id": "2b814fbe",
    "metadata": {},
    "outputs": [],
    "source": []
